# weftos

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  package-lock.json  package.json
clawft-ui/src-tauri/: Cargo.toml  tauri.conf.json
clawft-ui/src-tauri/src/: lib.rs  main.rs
crates/clawft-app/: Cargo.toml
crates/clawft-app/fixtures/: weftos-admin.toml
crates/clawft-app/src/: lib.rs  lifecycle.rs  manifest.rs  registry.rs  validation.rs
crates/clawft-casestudy-gen-qsr/: Cargo.toml
crates/clawft-casestudy-gen-qsr/src/: audit.rs  coherence.rs  config.rs  dashboard.rs  dimensions.rs  eml.rs  engine.rs  events.rs  gaps.rs  governance.rs  graph.rs  impulse.rs  ingest.rs  lib.rs  main.rs  ops_events.rs  output.rs  privacy.rs  recall.rs  rollup.rs  shard.rs
crates/clawft-casestudy-gen-qsr/tests/: phase1_e2e.rs  phase2_e2e.rs  phase3_e2e.rs  phase4_hardening.rs  tiny_e2e.rs
crates/clawft-channels/: Cargo.toml
crates/clawft-channels/src/: lib.rs  plugin_host.rs
crates/clawft-cli/: Cargo.toml
crates/clawft-cli/src/: help_text.rs  main.rs  mcp_tools.rs
crates/clawft-cli/tests/: cli_integration.rs
crates/clawft-core/: Cargo.toml
crates/clawft-core/benches/: pipeline_bench.rs
crates/clawft-core/src/: agent_bus.rs  bootstrap.rs  bus.rs  complexity.rs  lib.rs  planning.rs  policy_kernel.rs  routing_validation.rs  scoring.rs  session.rs
crates/clawft-core/tests/: context_compression_integration.rs  property_tests.rs  resolver_live_probe.rs
crates/clawft-edge-bench/: Cargo.toml
crates/clawft-edge-pad/: .gitignore  Cargo.toml  rust-toolchain.toml
crates/clawft-edge-pad-idf/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
crates/clawft-edge-pad-idf/.cargo/: config.toml
crates/clawft-edge-pad-idf/src/: board.rs  display.rs  main.rs  mesh.rs  net.rs
crates/clawft-edge-pad/.cargo/: config.toml
crates/clawft-edge-pad/src/: board.rs  main.rs  mesh.rs  net.rs  wifi_secrets.rs.example
crates/clawft-graphify/: Cargo.toml
crates/clawft-graphify/src/: alignment.rs  analyze.rs  bridge.rs  build.rs  cache.rs  cluster.rs  conversation.rs  eml_models.rs  entity.rs  hooks.rs  ingest.rs  lib.rs  model.rs  pipeline.rs  report.rs  semantic_extract.rs  summary.rs  topology.rs  topology_infer.rs  validation.rs  vision_extract.rs  watch.rs
crates/clawft-gui-egui/: Cargo.toml
crates/clawft-gui-egui/examples/: canon_slider_windows_deadlock_repro.rs  workshop-watcher.rs
crates/clawft-gui-egui/src/: app.rs  canon_demos.rs  lib.rs  live.rs  theming.rs  wasm_time.rs
crates/clawft-gui-egui/tests/: admin_app_e2e.rs  chat_panel_live_smoke.rs  compose_extra_iris.rs  surface_headless_render.rs  workshop_integration.rs
crates/clawft-kernel/: Cargo.toml  Dockerfile.alpine
crates/clawft-kernel/src/: a2a.rs  agent_loop.rs  agent_registry.rs  app.rs  artifact_store.rs  auth_service.rs  boot.rs  calibration.rs  capability.rs  causal.rs  causal_predict.rs  chain.rs  cluster.rs  cognitive_tick.rs  config.rs  config_service.rs  console.rs  container.rs  cron.rs  crossref.rs  dead_letter.rs  democritus.rs  embedding.rs  embedding_onnx.rs  eml_coherence.rs  eml_kernel.rs  eml_persistence.rs  environment.rs  error.rs  gate.rs  governance.rs  health.rs  heartbeat.rs  hnsw_eml.rs  hnsw_service.rs  http_api.rs  impulse.rs  ipc.rs  lib.rs  log_service.rs  (+46 more)
crates/clawft-kernel/tests/: e2e_integration.rs  feature_composition.rs  golden_snapshots.rs  pasqal_live.rs  stream_anchor_test.rs
crates/clawft-llm/: Cargo.toml
crates/clawft-llm/src/: browser_transport.rs  eml_retry.rs  failover.rs  lib.rs  local_provider.rs  openai_compat.rs  retry.rs
crates/clawft-llm/tests/: mock_http.rs
crates/clawft-lsp-extract/: Cargo.toml
crates/clawft-lsp-extract/src/: config.rs  extract.rs  lib.rs  protocol.rs  server.rs
crates/clawft-platform/: Cargo.toml
crates/clawft-platform/src/: config_loader.rs
crates/clawft-platform/tests/: overlay_probe.rs
crates/clawft-plugin/: Cargo.toml
crates/clawft-plugin/src/: error.rs  lib.rs  manifest.rs  sandbox.rs  skill_grants.rs  traits.rs
crates/clawft-plugin/tests/: voice_umbrella.rs
crates/clawft-rpc/: Cargo.toml
crates/clawft-rpc/src/: client.rs  lib.rs  protocol.rs  version_check.rs
crates/clawft-security/: Cargo.toml
crates/clawft-security/src/: lib.rs
crates/clawft-service-agent/: Cargo.toml
crates/clawft-service-agent/src/: kernel_gate.rs  lib.rs  protocol.rs  service.rs  substrate_budget.rs  substrate_sink.rs
crates/clawft-service-agent/tests/: dispatch.rs  substrate_sink.rs  witness_chain.rs
crates/clawft-service-classify/: Cargo.toml
crates/clawft-service-classify/src/: classifier.rs  lib.rs  service.rs
crates/clawft-service-llm/: Cargo.toml
crates/clawft-service-llm/src/: client.rs  lib.rs
crates/clawft-service-terminal/: Cargo.toml
crates/clawft-service-terminal/src/: lib.rs  session.rs
crates/clawft-service-whisper/: Cargo.toml
crates/clawft-service-whisper/examples/: publish_wav.rs
crates/clawft-service-whisper/src/: audit.rs  client.rs  lib.rs  manifest.rs  service.rs  wav.rs  windower.rs
crates/clawft-services/: Cargo.toml
crates/clawft-services/src/: error.rs  lib.rs
crates/clawft-services/tests/: api_middleware.rs
crates/clawft-substrate/: Cargo.toml
crates/clawft-substrate/src/: adapter.rs  bluetooth.rs  chain.rs  health.rs  healthcheck.rs  kernel.rs  lib.rs  mesh.rs  mic.rs  network.rs  presence.rs  projection.rs  rfkill.rs  snapshot.rs
crates/clawft-substrate/tests/: mock_adapter.rs
crates/clawft-surface/: Cargo.toml
crates/clawft-surface/fixtures/: weftos-admin-desktop.toml  weftos-chip-exochain.toml
crates/clawft-surface/src/: builder.rs  eval.rs  lib.rs  tree.rs
crates/clawft-surface/tests/: eval_bindings.rs  roundtrip.rs  weftos_admin_builder.rs
crates/clawft-tools/: Cargo.toml
crates/clawft-tools/src/: audio_synthesize.rs  audio_transcribe.rs  delegate_tool.rs  file_tools.rs  lib.rs  render_ui.rs  security_policy.rs  (+2 more)
crates/clawft-treecalc/: Cargo.toml
crates/clawft-types/: Cargo.toml
(+2607 files in other folders)
