[workspace]
resolver = "2"
members = [
    "crates/clawft-types",
    "crates/clawft-platform",
    "crates/clawft-core",
    "crates/clawft-llm",
    "crates/clawft-tools",
    "crates/clawft-channels",
    "crates/clawft-services",
    "crates/clawft-cli",
    "crates/clawft-wasm",
    "crates/clawft-plugin",
    # Only `clawft-plugin-treesitter` remains a workspace member -- it is
    # consumed by `clawft-kernel` (assessment::extract_symbols) under the
    # kernel's `treesitter` feature. The other eight `clawft-plugin-*`
    # crates were moved to `crates/archive/` per ADR-051; they are
    # excluded from the workspace below.
    "crates/clawft-plugin-treesitter",
    "crates/clawft-security",
    "crates/clawft-kernel",
    "crates/clawft-rpc",
    "crates/clawft-weave",
    "crates/exo-resource-tree",
    "crates/weftos",
    "crates/clawft-graphify",
    "crates/clawft-lsp-extract",
    "crates/weftos-leaf-types",
    "crates/eml-core",
    "crates/clawft-app",
    "crates/clawft-gui-egui",
    "crates/clawft-substrate",
    "crates/clawft-surface",
    "crates/clawft-treecalc",
    "crates/clawft-casestudy-gen-qsr",
    "crates/clawft-service-whisper",
    "crates/clawft-service-llm",
    "crates/clawft-service-terminal",
    "crates/clawft-service-classify",
    "crates/clawft-service-agent",
]
exclude = [
    "gui/src-tauri",
    # Archived per ADR-051 (clawft-plugin-* fate). These crates are
    # preserved in-tree for git-history continuity and possible future
    # revival, but are not part of the active workspace build.
    "crates/archive",
]

[workspace.package]
version = "0.6.19"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weave-logic-ai/weftos"
homepage = "https://github.com/weave-logic-ai/weftos"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "default-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Async utilities
tokio-util = "0.7"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Path handling
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Crypto
hmac = "0.12"
sha2 = "0.10"
sha3 = { version = "0.10", default-features = false, features = ["std"] }

# Scheduling
cron = "0.15"

# Markdown
pulldown-cmark = "0.12"

# Table display
comfy-table = "7"

# Browser open
open = "5"

# YAML
serde_yaml = "0.9"

# Regex
regex = "1"

# Binary discovery
which = "7"

# Random (testing)
rand = "0.8"

# WASM-compatible random
getrandom = { version = "0.2", features = ["js"] }

# Ed25519 signing
ed25519-dalek = { version = "2", features = ["rand_core"] }

# WASM runtime (feature-gated behind wasm-sandbox)
wasmtime = { version = "33", default-features = false, features = ["cranelift", "async", "wat"] }
wasmtime-wasi = { version = "33", default-features = false, features = ["preview1"] }

# File-system watching
notify = "7"

# RVF (RuVector Format) -- vector storage
# rvf-types, rvf-runtime, rvf-wire: upstream crates.io (ruvnet)
# weftos-rvf-crypto: our fork with ML-DSA-65 dual signing
rvf-runtime = { version = "0.2", default-features = false, features = ["std"] }
rvf-types = { version = "0.2", default-features = false, features = ["std"] }
weftos-rvf-crypto = { version = "0.3", default-features = false, features = ["std", "ed25519"] }
weftos-rvf-wire = { version = "0.2" }

# CBOR codec (ExoChain payload format)
ciborium = "0.2"

# HNSW approximate nearest neighbor search
instant-distance = "0.6"

# ONNX Runtime (embedding inference)
ort = { version = "2.0.0-rc.12", default-features = false }
ndarray = "0.16"

# Noise Protocol (mesh transport encryption)
snow = "0.10"

# BLAKE3 hashing (ECC cognitive substrate)
blake3 = "1.5"

# Concurrent hash map
dashmap = "6"

# ULID (sortable, ms-prefixed unique ids; used for substrate per-turn
# JSONL keys in clawft-service-agent's substrate sink).
ulid = "1"

# Distributed coordination (crates.io — upstream ruvnet)
ruvector-cluster = "2.0"
ruvector-raft = "2.0"
ruvector-replication = "2.0"
ruvector-diskann = "2.1"
cognitum-gate-tilezero = "0.1"
parking_lot = "0.12"
futures = "0.3"

# Internal crates (version + path: version for crates.io, path for workspace)
clawft-rpc = { version = "0.6.6", path = "crates/clawft-rpc" }
clawft-types = { version = "0.6.6", path = "crates/clawft-types", default-features = false }
clawft-platform = { version = "0.6.6", path = "crates/clawft-platform", default-features = false }
clawft-core = { version = "0.6.6", path = "crates/clawft-core", default-features = false }
clawft-tools = { version = "0.6.6", path = "crates/clawft-tools", default-features = false }
clawft-channels = { version = "0.6.6", path = "crates/clawft-channels" }
clawft-llm = { version = "0.6.6", path = "crates/clawft-llm", default-features = false }
clawft-services = { version = "0.6.6", path = "crates/clawft-services" }
clawft-plugin = { version = "0.6.6", path = "crates/clawft-plugin", default-features = false }
# Only the treesitter plugin retains a workspace dependency entry --
# it is the sole orphan-survivor (ADR-051) and is wired into
# `clawft-kernel` via the `treesitter` feature. The other eight
# `clawft-plugin-*` crates live under `crates/archive/` and are not
# referenced by the active workspace build.
clawft-plugin-treesitter = { version = "0.6.6", path = "crates/clawft-plugin-treesitter" }
clawft-graphify = { version = "0.6.6", path = "crates/clawft-graphify", default-features = false }
clawft-security = { version = "0.6.6", path = "crates/clawft-security" }
clawft-kernel = { version = "0.6.6", path = "crates/clawft-kernel", default-features = false }
exo-resource-tree = { version = "0.6.6", path = "crates/exo-resource-tree" }
weftos = { version = "0.6.6", path = "crates/weftos", default-features = false }
clawft-substrate = { version = "0.6.6", path = "crates/clawft-substrate" }
clawft-app = { version = "0.6.6", path = "crates/clawft-app" }
clawft-surface = { version = "0.6.6", path = "crates/clawft-surface" }
clawft-service-whisper = { version = "0.6.6", path = "crates/clawft-service-whisper" }
clawft-service-llm = { version = "0.6.6", path = "crates/clawft-service-llm" }
clawft-service-terminal = { version = "0.6.6", path = "crates/clawft-service-terminal" }
clawft-service-classify = { version = "0.6.6", path = "crates/clawft-service-classify" }
clawft-service-agent = { version = "0.6.6", path = "crates/clawft-service-agent" }

# EML (exp-ln) function approximation
eml-core = { version = "0.1.0", path = "crates/eml-core" }

# Tree-calculus Form triage
clawft-treecalc = { version = "0.1.0", path = "crates/clawft-treecalc" }

# Graph library
petgraph = "0.7"
rayon = "1.10"
walkdir = "2"

# Testing
insta = { version = "1.39", features = ["json"] }
tempfile = "3"

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Target platforms for binary builds
targets = [
    # Linux glibc
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    # Linux musl (static)
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    # macOS
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    # Windows
    "x86_64-pc-windows-msvc",
]
# Installers to generate
installers = ["shell", "powershell", "homebrew"]
# Homebrew tap repository
tap = "weave-logic-ai/homebrew-tap"
# Publish jobs to run (homebrew formula auto-published to tap repo)
publish-jobs = ["homebrew"]
# Enable GitHub Attestations for provenance
github-attestations = true
# Create a GitHub Release on tag push
create-release = true
# Archive format per platform (tar.gz for Unix, zip for Windows)
unix-archive = ".tar.gz"
windows-archive = ".zip"
# Include in archives
include = ["LICENSE", "README.md"]
# Do not auto-include workspace crates — we mark distributable ones explicitly
auto-includes = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

# cargo-dist build profile
[profile.dist]
inherits = "release"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
