[package]
name = "clawft-ui-tauri"
version = "0.7.0"
description = "ClawFT agent dashboard — Tauri 2.0 desktop shell"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
publish = false

# This crate is intentionally excluded from the root [workspace] (see
# the top-level Cargo.toml) so kernel developers do not need the
# platform WebView SDKs (libwebkit2gtk-4.1-dev on Linux, WebView2 on
# Windows) to build the core crates. Build the desktop shell via:
#
#   cd clawft-ui/src-tauri && cargo tauri build
#
# or, when the side-car / hotkey work lands:
#
#   scripts/build.sh tauri-desktop

[lib]
name = "clawft_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
