[package]
name = "clawft-casestudy-gen-qsr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "QSR synthetic corpus generator — Phase 0 test harness for WeftOS ECC scenario reasoning"
# rationale: internal build / test-harness tool; not a public API.
publish = false

[[bin]]
name = "clawft-casestudy-gen-qsr"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_distr = "0.4"
rand_chacha = "0.3"
thiserror = { workspace = true }
regex = { workspace = true }
instant-distance = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
