[package]
name = "clawft-channels"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Channel plugin system for clawft"
keywords = ["telegram", "slack", "discord", "chat", "bot"]
categories = ["network-programming"]

[features]
default = ["native"]
native = ["clawft-plugin/native"]
email = []
whatsapp = ["dep:axum", "dep:hex"]
# `signal` requires `clawft-plugin/native` for the tokio-backed
# CancellationToken. The crate's `native` feature is on by default
# (see [features].default), so this is a belt-and-suspenders
# guarantee for `cargo check -p clawft-channels --features signal`
# without --no-default-features.
signal = ["clawft-plugin/native"]
matrix = []
# Google Chat adapter: Pub/Sub pull + chat.spaces.messages.create POST.
# base64 decodes the Pub/Sub data field.
google-chat = ["dep:base64"]
# IRC adapter: TCP/TLS dial + IRCv3 CAP/SASL + JOIN + PRIVMSG.
# tokio-rustls/webpki-roots/rustls-pki-types provide TLS; base64 backs
# SASL PLAIN.
irc = ["dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pki-types", "dep:base64"]
# Microsoft Teams: Bot Framework OAuth2 + Graph + axum webhook + JWT.
teams = ["dep:axum", "dep:jsonwebtoken"]

[dependencies]
clawft-types = { workspace = true }
clawft-platform = { workspace = true }
clawft-plugin = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

# Optional, gated under feature flags. Pulled in only when the relevant
# adapter is enabled (see [features] above).
# - base64: google-chat Pub/Sub data field; irc SASL PLAIN.
# - axum + jsonwebtoken: teams Bot Framework webhook + JWT decode.
# - axum + hex: whatsapp Cloud API webhook + HMAC hex.
# - tokio-rustls / webpki-roots / rustls-pki-types: irc TLS dial.
base64 = { version = "0.22", optional = true }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "macros"], optional = true }
jsonwebtoken = { version = "9", default-features = false, optional = true }
hex = { version = "0.4", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"], optional = true }
webpki-roots = { version = "1.0", optional = true }
rustls-pki-types = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true }
# wiremock + mockito back HTTP-level adapter tests across multiple
# adapters (Google Chat, Teams, WhatsApp). Already used elsewhere in
# the workspace at these versions.
wiremock = "0.6"
mockito = "1"
# Used by `whatsapp` webhook unit tests to drive the axum router
# in-process via `ServiceExt::oneshot`.
tower = { version = "0.5", features = ["util"] }
