[package]
name = "clawft-cli"
version.workspace = true
# rationale: end-user binary (`weft`); shipped via cargo-dist + Homebrew, not crates.io.
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary (weft) for clawft"
keywords = ["cli", "ai", "assistant", "agent", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "weft"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = ["channels", "services", "delegate", "api"]
channels = ["dep:clawft-channels"]
services = ["dep:clawft-services"]
vector-memory = ["clawft-core/vector-memory"]
delegate = ["clawft-services/delegate", "clawft-tools/delegate"]
voice = ["clawft-tools/voice", "clawft-plugin/voice"]
api = ["clawft-services/api"]

[dependencies]
clawft-rpc = { workspace = true }
clawft-types = { workspace = true }
clawft-platform = { workspace = true }
clawft-core = { workspace = true, features = ["native", "full"] }
clawft-tools = { workspace = true, features = ["native-exec", "native", "canvas"] }
clawft-channels = { workspace = true, optional = true }
clawft-llm = { workspace = true }
clawft-services = { workspace = true, optional = true }
clawft-plugin = { workspace = true }
clawft-security = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
pulldown-cmark = { workspace = true }
comfy-table = { workspace = true }
cron = { workspace = true }
tokio-util = { workspace = true }
rpassword = "5"
uuid = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
# Real Ed25519 keypair generation for `weft skills keygen` (WEFT-23).
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
