[package]
name = "clawft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core engine for clawft (agent loop, message bus, context management)"
keywords = ["ai", "agent", "pipeline", "tools", "llm"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full", "native"]
full = ["rvf", "signing", "vector-memory"]
native = [
    "dep:notify",
    "dep:dirs",
    "dep:tokio",
    "dep:tokio-util",
    "dep:clawft-service-llm",
    "clawft-platform/native",
    "clawft-llm/native",
    "clawft-plugin/native",
    "clawft-types/native",
]
browser = [
    "clawft-platform/browser",
    "clawft-llm/browser",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:futures-channel",
]
vector-memory = ["dep:rand", "dep:instant-distance"]
rvf = ["vector-memory", "dep:rvf-runtime", "dep:rvf-types", "dep:reqwest"]
signing = ["dep:ed25519-dalek", "dep:rand"]

[dependencies]
# Always available
clawft-types = { workspace = true, default-features = false }
clawft-platform = { workspace = true, default-features = false }
clawft-llm = { workspace = true, default-features = false }
clawft-plugin = { workspace = true, default-features = false }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
futures-util = { workspace = true }
percent-encoding = "2"
fnv = "1"

# Native only
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
# clawft-service-llm provides the narrow LlmClient that talks to a
# local llama-server over OpenAI-compat HTTP. The pipeline's
# ServiceLlmAdapter (`pipeline/service_llm_adapter.rs`) bridges
# LlmClient into the pipeline's LlmProvider trait so the agent loop
# routes through the same service the daemon's `llm.prompt` RPC uses.
# Native-only because LlmClient pulls reqwest.
clawft-service-llm = { workspace = true, optional = true }

# Browser only
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

# Optional across both
rand = { workspace = true, optional = true }
instant-distance = { workspace = true, optional = true }
rvf-runtime = { workspace = true, optional = true }
rvf-types = { workspace = true, optional = true }
# sha2 is always-on so identity hashing (Phase D1 of agent-core-v1)
# works without enabling rvf / signing. Existing rvf / signing
# features still depend on it transitively (was previously optional).
sha2 = { workspace = true }
reqwest = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clawft-platform = { workspace = true }
clawft-types = { workspace = true }
temp-env = "0.3"
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
rand = { workspace = true }
# ServiceLlmAdapter integration tests spin up a wiremock server to
# stand in for llama-server's `/v1/chat/completions` endpoint and
# verify the JSON conversion round-trip.
wiremock = "0.6"

[[bench]]
name = "pipeline_bench"
harness = false
